versioned_docs/version-3.15/scalardb-cluster/scalardb-cluster-status-codes.mdx
---
tags:
  - Enterprise Standard
  - Enterprise Premium
displayed_sidebar: docsEnglish
---

# ScalarDB Cluster Error Codes

This page provides a list of error codes in ScalarDB Cluster.

## Error code classes and descriptions

| Class              | Description                               |
|:-------------------|:------------------------------------------|
| `DB-CLUSTER-1xxxx` | Errors for the user error category        |
| `DB-CLUSTER-2xxxx` | Errors for the concurrency error category |
| `DB-CLUSTER-3xxxx` | Errors for the internal error category    |

## `DB-CLUSTER-1xxxx` status codes

The following are status codes and messages for the user error category.

### `DB-CLUSTER-10000`

**Message**

```markdown
The namespace does not exist. Namespace: %s
```

### `DB-CLUSTER-10001`

**Message**

```markdown
The table does not exist. Table: %s
```

### `DB-CLUSTER-10002`

**Message**

```markdown
The user does not exist. User: %s
```

### `DB-CLUSTER-10003`

**Message**

```markdown
ClusterConfig is not specified
```

### `DB-CLUSTER-10004`

**Message**

```markdown
The get type is unspecified
```

### `DB-CLUSTER-10005`

**Message**

```markdown
The get type is unrecognized
```

### `DB-CLUSTER-10006`

**Message**

```markdown
The value of the column is not set. Column: %s
```

### `DB-CLUSTER-10007`

**Message**

```markdown
The scan type is unspecified
```

### `DB-CLUSTER-10008`

**Message**

```markdown
The scan type is unrecognized
```

### `DB-CLUSTER-10009`

**Message**

```markdown
The order is unspecified
```

### `DB-CLUSTER-10010`

**Message**

```markdown
The order is unrecognized
```

### `DB-CLUSTER-10011`

**Message**

```markdown
The clustering order is unspecified
```

### `DB-CLUSTER-10012`

**Message**

```markdown
The clustering order is unrecognized
```

### `DB-CLUSTER-10013`

**Message**

```markdown
The put condition type is unspecified
```

### `DB-CLUSTER-10014`

**Message**

```markdown
The put condition type is unrecognized
```

### `DB-CLUSTER-10015`

**Message**

```markdown
The delete condition type is unspecified
```

### `DB-CLUSTER-10016`

**Message**

```markdown
The delete condition type is unrecognized
```

### `DB-CLUSTER-10017`

**Message**

```markdown
The operator is unspecified
```

### `DB-CLUSTER-10018`

**Message**

```markdown
The operator is unrecognized
```

### `DB-CLUSTER-10019`

**Message**

```markdown
The mutation is not set
```

### `DB-CLUSTER-10020`

**Message**

```markdown
The data type is unspecified
```

### `DB-CLUSTER-10021`

**Message**

```markdown
The data type is unrecognized
```

### `DB-CLUSTER-10022`

**Message**

```markdown
The user option is unspecified
```

### `DB-CLUSTER-10023`

**Message**

```markdown
The user option is unrecognized
```

### `DB-CLUSTER-10024`

**Message**

```markdown
The privilege is unspecified
```

### `DB-CLUSTER-10025`

**Message**

```markdown
The privilege is unrecognized
```

### `DB-CLUSTER-10026`

**Message**

```markdown
The username is not set
```

### `DB-CLUSTER-10027`

**Message**

```markdown
This feature is not supported in ScalarDB Cluster
```

### `DB-CLUSTER-10028`

**Message**

```markdown
The property 'scalar.db.contact_points' must not be empty
```

### `DB-CLUSTER-10029`

**Message**

```markdown
The property 'scalar.db.contact_points' must be prefixed with 'indirect:' or 'direct-kubernetes:'
```

### `DB-CLUSTER-10030`

**Message**

```markdown
The format of the property 'scalar.db.contact_points' for direct-kubernetes client mode is 'direct-kubernetes:<NAMESPACE_NAME>/<ENDPOINT_NAME>' or 'direct-kubernetes:<ENDPOINT_NAME>'
```

### `DB-CLUSTER-10031`

**Message**

```markdown
The property 'scalar.db.sql.cluster_mode.contact_points' must not be empty
```

### `DB-CLUSTER-10032`

**Message**

```markdown
The property 'scalar.db.sql.cluster_mode.contact_points' must be prefixed with 'indirect:' or 'direct-kubernetes:'
```

### `DB-CLUSTER-10033`

**Message**

```markdown
The format of the property 'scalar.db.sql.cluster_mode.contact_points' for direct-kubernetes client mode is 'direct-kubernetes:<NAMESPACE_NAME>/<ENDPOINT_NAME>' or 'direct-kubernetes:<ENDPOINT_NAME>'
```

### `DB-CLUSTER-10034`

**Message**

```markdown
ClusterNodeManagerFactory is not specified
```

### `DB-CLUSTER-10035`

**Message**

```markdown
The update condition type is unspecified
```

### `DB-CLUSTER-10036`

**Message**

```markdown
The update condition type is unrecognized
```

### `DB-CLUSTER-10037`

**Message**

```markdown
The two-phase commit interface is not supported
```

### `DB-CLUSTER-10038`

**Message**

```markdown
Membership is not specified
```

### `DB-CLUSTER-10039`

**Message**

```markdown
The policy state is unspecified
```

### `DB-CLUSTER-10040`

**Message**

```markdown
The policy state is unrecognized
```

### `DB-CLUSTER-10041`

**Message**

```markdown
The access mode is unspecified
```

### `DB-CLUSTER-10042`

**Message**

```markdown
The access mode is unrecognized
```

### `DB-CLUSTER-10043`

**Message**

```markdown
The service does not exist. Service Class: %s
```

### `DB-CLUSTER-10044`

**Message**

```markdown
The policy does not exist. Policy: %s
```

### `DB-CLUSTER-10045`

**Message**

```markdown
The property 'scalar.db.embedding.client.contact_points' must not be empty
```

### `DB-CLUSTER-10046`

**Message**

```markdown
The property 'scalar.db.embedding.client.contact_points' must be prefixed with 'indirect:' or 'direct-kubernetes:'
```

### `DB-CLUSTER-10047`

**Message**

```markdown
The format of the property 'scalar.db.embedding.client.contact_points' for direct-kubernetes client mode is 'direct-kubernetes:<NAMESPACE_NAME>/<ENDPOINT_NAME>' or 'direct-kubernetes:<ENDPOINT_NAME>'
```

### `DB-CLUSTER-10048`

**Message**

```markdown
The embeddings must be provided
```

### `DB-CLUSTER-10049`

**Message**

```markdown
Only one embedding can be added with an embedding ID
```

### `DB-CLUSTER-10050`

**Message**

```markdown
Text segments cannot be provided when adding an embedding with an embedding ID
```

### `DB-CLUSTER-10051`

**Message**

```markdown
Both embedding IDs and a filter cannot be provided
```

### `DB-CLUSTER-10052`

**Message**

```markdown
Unsupported embedding store type. Type: %s
```

### `DB-CLUSTER-10053`

**Message**

```markdown
Unsupported embedding model type. Type: %s
```

### `DB-CLUSTER-10054`

**Message**

```markdown
The filter is not set
```

### `DB-CLUSTER-10055`

**Message**

```markdown
Unsupported metadata value type. Type: %s
```

### `DB-CLUSTER-10056`

**Message**

```markdown
The metadata value is not set
```

## `DB-CLUSTER-2xxxx` status codes

The following are status codes and messages for the concurrency error category.

### `DB-CLUSTER-20000`

**Message**

```markdown
The hop limit is exceeded
```

### `DB-CLUSTER-20001`

**Message**

```markdown
A transaction associated with the specified transaction ID is not found. The transaction might have expired, or the cluster node that handled the transaction might have been restarted. Transaction ID: %s
```

## `DB-CLUSTER-3xxxx` status codes

The following are status codes and messages for the internal error category.

### `DB-CLUSTER-30000`

**Message**

```markdown
Getting local IP addresses failed
```

### `DB-CLUSTER-30001`

**Message**

```markdown
Getting a cluster node object from the cache failed. Cluster Node IP Address: %s
```

### `DB-CLUSTER-30002`

**Message**

```markdown
The ring is empty
```

### `DB-CLUSTER-30003`

**Message**

```markdown
Getting the Kubernetes API client failed
```

### `DB-CLUSTER-30004`

**Message**

```markdown
Reading the Kubernetes endpoint failed. Namespace: %s; Name: %s; Code: %d; Response Headers: %s; Response Body: %s
```

### `DB-CLUSTER-30005`

**Message**

```markdown
Configuring TLS failed
```

### `DB-CLUSTER-30006`

**Message**

```markdown
No nearest cluster nodes are found
```
